# wordpress-automation-tool

./: .replit  README.md  abilities.py  app.py  new_app.py  package-lock.json  package.json  pyproject.toml  requirements.txt  simple_app.py  simple_no_auth_app.py
WordPressAutomationTool/: platform_interface.py  routes.py_155-200
WordPressAutomationTool/CrossPlatform/: __init__.py
WordPressAutomationTool/WP-Automation-Tool/: .replit
WordPressAutomationTool/WordPress/: __init__.py  abilities.py  app_init.py  config.py  gemini_content_trainer.py  main.py  models.py  routes.py  routes_progress.py  wordpress_rest_api.py  wordpress_utils.py
WordPressAutomationTool/migrations/: 000_create_subscription_plan.sql  001_create_users_and_server_connections.sql  002_add_user_security_fields.sql  003_add_wordpress_installation.sql  004_add_softaculous_api_key.sql  005_add_installation_method.sql  006_create_website_categories.sql  007_create_themes.sql  008_add_theme_status.sql  009_create_wordpress_installation.sql  009_create_wordpress_installation_base.sql  010_add_wordpress_installation_columns.sql  011_create_subscription_plan.sql  012_add_user_admin_field.sql  013_add_user_indexes.sql  014_add_user_is_admin_index.sql  015_add_user_foreign_keys.sql  016_add_foreign_keys.sql  017_add_progress_tracking.sql  018_create_wordpress_installation.sql  019_fix_wordpress_installation.sql  020_create_chat_messages.sql  021_fix_user_table.sql
attached_assets/: Pasted--app-route-website-category-methods-GET-POST-login-required-def-website-category--1746526397345.txt
(+56 files in other folders)
